--- a/public/css/sections.css
+++ b/public/css/sections.css
@@ -2,13 +2,19 @@
     width: 90%;
     margin: 0 auto;
     display: flex;
+    position: relative;
 }
 
 .sections .filter {
+    margin-left: 5%;
     display: block;
-    width: 25%;
+    width: 30%;
+    /* height: 90%; */
+    box-sizing: border-box;
+    padding-left: 30px;
     position: fixed;
     right: 5%;
+    border-left: 3px solid black;
 }
 
 .sections .info {
