Работа с контроллерами и представлениями одежды, правки стилей

--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -1,9 +1,9 @@
 .menu {
+    max-width: 1200px;
     margin: 0 auto;
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    width: 90%;
+    align-items: center;
 }
 
 .menu .wrap {
