--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,9 +1,9 @@
 .footer {
+    max-width: 1200px;
     margin: 0 auto;
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    width: 90%;
+    align-items: center;
 }
 
 .footer ul {
