--- a/public/css/progress-bar.css
+++ b/public/css/progress-bar.css
@@ -12,8 +12,8 @@
 }
 
 .progress-bar h1, .progress-bar h2, .progress-bar p {
+    max-width: 1200px;
     margin: 0 auto;
-    width: 90%;
 }
 
 .progress-bar h1 {
