Настройка пагинации + стили пагинации

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -9,5 +9,6 @@
 @import "buttons.css";
 @import "tooltip.css";
 @import "sections.css";
+@import "pagination.css";
 @import "option-input.css";
 @import "main.css";
