--- a/public/css/pagination.css
+++ b/public/css/pagination.css
@@ -38,8 +38,8 @@
 .pagination>.active>a, .pagination>.active>span, .pagination>.active>a:hover, .pagination>.active>span:hover, .pagination>.active>a:focus, .pagination>.active>span:focus {
     z-index: 2;
     color: white;
-    cursor: default;
     background-color: #AD7F00;
+    pointer-events: none;
 }
 
 .pagination>.disabled>span, .pagination>.disabled>span:hover, .pagination>.disabled>span:focus, .pagination>.disabled>a, .pagination>.disabled>a:hover, .pagination>.disabled>a:focus {
