--- a/public/css/sections.css
+++ b/public/css/sections.css
@@ -86,12 +86,12 @@
     text-align: center;
 }
 
-.sections .info {
+.sections .product {
     display: block;
     width: 65%;
 }
 
-.sections .info nav {
+.sections .product nav {
     min-width: 200px;
     margin: 0 auto;
 }
@@ -129,7 +129,7 @@
     margin: 30px;
 }
 
-.sections h3 {
+.sections .goods h3 {
     position: relative;
     z-index: 100;
     margin: 30px 30px 0;
