Начальные настройки контроллера юзера, его представлений и стилей

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -9,6 +9,7 @@
 @import "buttons.css";
 @import "tooltip.css";
 @import "sections.css";
+@import "user.css";
 @import "pagination.css";
 @import "option-input.css";
 @import "main.css";
