--- a/public/css/sections.css
+++ b/public/css/sections.css
@@ -17,7 +17,7 @@
     display: block;
     width: 25%;
     box-sizing: border-box;
-    padding-left: 30px;
+    padding: 30px 0 30px 30px;
     border-left: 2px solid #AD7F00;
     font-size: 0.8em;
 }
