--- a/public/css/user.css
+++ b/public/css/user.css
@@ -57,7 +57,7 @@
     overflow: hidden;
     position: relative;
     display: inline-block;
-    border: 3px solid #AD7F00;
+    border: 3px solid #3CA6C7;
     border-radius: 50%;
     width: 200px;
     height: 200px;
