--- a/public/css/user.css
+++ b/public/css/user.css
@@ -169,3 +169,54 @@
     right: -25px;
     top: 60px;
 }
+
+.user .info .messages {
+    max-height: 200px;
+    overflow: auto;
+    overflow-x: hidden;
+    position: relative;
+}
+
+.user .info .messages .mes-user, .user .info .messages .mes-admin {
+    display: flex;
+    justify-content: space-between;
+    clear: both;
+    width: 45%;
+    margin: 5px;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: #3CA6C7;
+}
+
+.user .info .messages .mes-user {
+    float: right;
+    text-align: left;
+}
+
+.user .info .messages .mes-admin {
+    float: left;
+    text-align: right;
+}
+
+.user .info .messages .avt {
+    flex-shrink: 0;
+    width: 50px;
+    height: 50px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.user .info .messages .avt img {
+    width: 100%;
+}
+
+.user .info .messages span {
+    color: #80E1FF;
+    font-size: 11px;
+}
+
+.user .info .messages p {
+    color: white;
+    font-size: 14px;
+}
