Новые стили. Удалён лишний контроллер. Работа с сообщениями.

--- a/public/css/admin-index.css
+++ b/public/css/admin-index.css
@@ -3,6 +3,9 @@
 @import "tooltip.css";
 @import "pagination.css";
 @import "option-input.css";
+@import "buttons.css";
+@import "table.css";
 @import "main.css";
+@import "admin-feedback.css";
 @import "admin-menu.css";
 @import "admin-main.css";
