--- a/public/css/user.css
+++ b/public/css/user.css
@@ -205,6 +205,7 @@
     border: 2px solid #fff;
     border-radius: 50%;
     overflow: hidden;
+    margin: 20px;
 }
 
 .user .info .messages .avt img {
