--- a/public/css/admin-index.css
+++ b/public/css/admin-index.css
@@ -6,6 +6,7 @@
 @import "buttons.css";
 @import "table.css";
 @import "main.css";
+@import "modal.css";
 @import "admin-feedback.css";
 @import "admin-menu.css";
 @import "admin-main.css";
