Начальные настройки отзывов о товаре.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -10,6 +10,7 @@
 @import "tooltip.css";
 @import "sections.css";
 @import "user.css";
+@import "reviews.css";
 @import "table.css";
 @import "jquery.cropbox.css";
 @import "pagination.css";
