--- a/public/css/table.css
+++ b/public/css/table.css
@@ -13,6 +13,11 @@
     padding: 20px;
 }
 
+.table td a {
+    text-decoration: none;
+    padding: 0 20px;
+}
+
 .table button {
     border: none;
     outline: none;
