Настройка 404й страницы. Правки переадресаций при недоступности контента.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,6 +2,7 @@
 @import "main-cover.css";
 @import "menu.css";
 @import "back.css";
+@import "page404.css";
 @import "gradient-border.css";
 @import "progress-bar.css";
 @import "login.css";
