Категории в админке. Языковые настройки.

--- a/public/css/admin-index.css
+++ b/public/css/admin-index.css
@@ -5,6 +5,7 @@
 @import "option-input.css";
 @import "buttons.css";
 @import "table.css";
+@import "page404.css";
 @import "main.css";
 @import "modal.css";
 @import "admin-feedback.css";
