--- a/public/css/admin-main.css
+++ b/public/css/admin-main.css
@@ -47,6 +47,7 @@
 .form label {
     margin: 30px 0;
     display: block;
+    position: relative;
 }
 
 .form label span {
@@ -86,4 +87,72 @@
 
 .form .textarea {
     height: 300px;
+}
+
+.form .count {
+    display: none;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.form .file-upload {
+    position: relative;
+    width: 100px;
+    height: 70px;
+    box-sizing: border-box;
+    overflow: hidden;
+    border-radius: 5px;
+}
+
+.form .file-upload input[type="file"] {
+    display: none;
+}
+
+.form .file-upload label {
+    cursor: pointer;
+    width: 100px;
+    height: 70px;
+    margin: 0;
+    color: #AD7F00;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #AD7F00;
+    background: rgba(250, 185, 0, 0.2);
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+.form .file-upload img {
+    width: 100%;
+    display: none;
+    border-radius: 5px;
+}
+
+.form #galery div {
+    display: inline-block;
+    margin: 0 10px 10px 0;
+}
+
+.form .delete-previous, .form .delete-image {
+    position: absolute;
+    top: 3px;
+    right: 3px;
+    cursor: pointer;
+    color: #FFF;
+}
+
+.form .delete-previous {
+    display: none;
+}
+
+.bt {
+    text-align: center;
+    width: 400px;
+    margin-bottom: 30px;
+}
+
+.bt a {
+    text-decoration: none;
 }
