Наработки представления историй.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -10,6 +10,7 @@
 @import "buttons.css";
 @import "tooltip.css";
 @import "sections.css";
+@import "stories.css";
 @import "user.css";
 @import "reviews.css";
 @import "table.css";
