--- a/public/css/index.css
+++ b/public/css/index.css
@@ -14,6 +14,7 @@
 @import "user.css";
 @import "reviews.css";
 @import "table.css";
+@import "touchTouch.css";
 @import "jquery.cropbox.css";
 @import "pagination.css";
 @import "option-input.css";
