--- a/public/css/main.css
+++ b/public/css/main.css
@@ -58,3 +58,7 @@ footer {
 .valid input, .valid textarea {
     border-bottom: 1px solid #fa0202 !important;
 }
+
+.center {
+    text-align: center;
+}
